--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
             <button class="no" id="noBtn" onclick="moveNo()">No 😜</button>
 
             <div class="letter" id="letter">
-                Khushi❤️,You are the quiet happiness I didn't know I needed - the kind that stays, the kind that heals, and the kind that turns ordinary days into memories I want to keep forever. 💖
+                Khushi❤️,You are the quiet happiness I didn't know I needed - the kind that stays, the kind that heals, and the kind that turns ordinary days into memories I want to keep forever. 💖  
+                Or bby Sorry main terko yee time nhi bna k de paaya i hope you understand that😘😘😘😘😘😘.  
             </div>
 
 
