--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
             <div class="letter" id="letter">
                 Khushi❤️,You are the quiet happiness I didn't know I needed - the kind that stays, the kind that heals, and the kind that turns ordinary days into memories I want to keep forever. 💖  
-                Or bby Sorry main terko yee time nhi bna k de paaya i hope you understand that😘😘😘😘😘😘.  
+                Or bby Sorry main terko yee time pe nhi bna k de paaya i hope you understand that😘😘😘😘😘😘.  
             </div>
 
 
