--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
             <button class="music-btn" onclick="toggleMusic()">🎵</button>
 
-            <h1>Khushi❤️</h1>s
+            <h1>Khushi❤️</h1>
 
             <p id="typing"></p>
 
