--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@
 
             <h2>Will You Be My Valentine? 💌</h2>
 
-            <button class="yes" onclick="sayYes()">Yes ❤️</button>
-            <button class="no" id="noBtn" onclick="moveNo()">No 😜</button>
+            <button class="yes" onclick="sayYes()">Yes😚❤️</button>
+            <button class="no" id="noBtn" onclick="moveNo()">No ☹️</button>
 
             <div class="letter" id="letter">
-                Khushi❤️,You are the quiet happiness I didn't know I needed - the kind that stays, the kind that heals, and the kind that turns ordinary days into memories I want to keep forever. 💖  
-                Or bby Sorry main terko yee time pe nhi bna k de paaya i hope you understand that😘😘😘😘😘😘.  
+                Khushi❤️,You are the quiet happiness I didn't know I needed - the kind that stays, the kind that heals, and the kind that turns ordinary days into memories I want to keep forever🤗💞💖  
+                Or bby Sorry main terko yee time pe nhi bna k de paaya i hope you understand that😘😘😘😘😘😘.[ I love you so, soo much,bby 💋❤️❤️😚😚] 
             </div>
 
 
